--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,9 @@
         <meta name="keywords" content="stilin, profile">
 
         <meta name="author" content="stilin">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
     <header>
         
