--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
             <hr>
             <br>
             <div class="container">
-                <p class="imageWriteup"><img class="rightSideImage" src="jakeAtWork.jpg" alt="Jake at Work" width="240" height="320">
-                    <br>
-                    <br>
-                    <br>
-                Here is a humorous image of me at work this one time when my supervisor came in and said she was pretty sure I had been suspended indefinetely.
-                </p>
+                <div class="row">
+                    <div class="col-sm-9">
+                        <p class="imageWriteup">Here is a humorous image of me at work this one time when my supervisor came in and said she was pretty sure I had been suspended indefinitely.
+                        </p>
+                    </div>
+                    <div class="col-sm-3">
+                        <img class="rightSideImage" src="jakeAtWork.jpg" alt="Jake at Work" width="240" height="320">
+                    </div>
+                </div>
             </div>
             <br>
             <br>
@@ -65,16 +68,16 @@
             <br>
             <br>
             <br>
-            <br>
-            <br>
-
             <div class="container">
-                <p class="imageWriteup"><img class="leftSideImage" src="jakeInBed.jpg" alt="Jake in Bed" width="240" height="320">
-                    <br>
-                    <br>
-                    <br>
-                Here is a cool image of me laying in bed up north. It was a cold night; we were running low on wood for the stove and I didn't know how to close the vents to keep the fire low so I wore my scarf to bed. We also had to leave at 5am and I was not trying to be cold.
-                </p>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <img class="leftSideImage" src="jakeInBed.jpg" alt="Jake in Bed" width="240" height="320">
+                    </div>
+                    <div class="col-sm-9">
+                        <p class="imageWriteup">Here is a cool image of me laying in bed up north. It was a cold night; we were running low on wood for the stove and I didn't know how to close the vents to keep the fire low so I wore my scarf to bed. We also had to leave at 5am and I was not trying to be cold.
+                        </p>
+                    </div>
+                </div>
             </div>
             <br>
             <br>
@@ -82,15 +85,16 @@
             <br>
             <br>
             <br>
-            <br>
-            <br>
-                        <div class="container">
-                <p class="imageWriteup"><img class="rightSideImage" src="jakeAllWet.jpg" alt="Jake all Wet" width="240" height="320">
-                    <br>
-                    <br>
-                    <br>
-                Here is an image of me with water on my face. I had been biking home from work when it started raining so I stopped under an overpass. I took this picture because people look cool when rainswept and rugged. I hope it worked.
-                </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-9"> 
+                        <p class="imageWriteup">Here is an image of me with water on my face. I had been biking home from work when it started raining so I stopped under an overpass. I took this picture because people look cool when rainswept and rugged. I hope it worked.
+                        </p>
+                    </div>
+                    <div class="col-sm-3">
+                        <img class="rightSideImage" src="jakeAllWet.jpg" alt="Jake all Wet" width="240" height="320">
+                    </div>
+                </div>
             </div>
             <br>
             <br>
